2017-10-18  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-841

	* src/m_microphysics.cc (psdMgdMass): Extended, but still work in
	progress.

	* src/m_microphysics.cc (ScatSpeciesSizeMassInfo): A generalised
	combo of pnd_size_gridFromScatMeta and MassSizeParamsFromScatMeta.

	* src/microphysics.cc (derive_scat_species_a_and_b): A
	generalisation of MassSizeParamsFromScatMeta.

	* src/workspace.cc: Introduced scat_species_a, scat_species_b and
	scat_species_x.

2017-10-18  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-840

	* CMakeLists.txt:

	Explicitly call enable_language for C and CXX. Otherwise latest CLion
	version doesn't search for C++ standard library header files.

2017-10-16  Simon Pfreundschuh <simon.pfreundschuh@chalmers.se>

	* arts-2-3-839

	* src/arts_api.cc (agenda_insert_set):
	Fixed implementation so that values of type Numeric are handled
	correctly. Thanks to Richard for reporting this bug.

2017-10-16  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-838

	* src/matpackI.h (Iterator1D):

	Add operator== and operator- when compiled with libstdc++ to make
	Iterator1D compatible with stl functions such as std::any_of. Reported
	by Richard.

	* src/test_matpack.cc (test46): Add test for std::any_of.

2017-10-16  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-837

	* src/parser.cc (ArtsParser::parse_method_args):

	Also consider output arguments.

2017-10-16  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-836

	* src/parser.cc (ArtsParser::parse_method_args):

	Improve error message for wrong or duplicate named arguments. Reported
	by Patrick.

2017-10-16 Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-835

	* src/oem.h (ArtsLog::step):
	Change name of variable to avoid shadowing of function name.

	* src/m_oem.cc(OEM):
	Fix naming of covariance matrices and damping matrix of LM method.

	* src/covariance_matrix.[h,cc] (get_inverse):
	Added function to extract inverse from covariance matrix.
