@@ -12469,7 +12469,8 @@ void define_md_data_raw()
         GOUT_TYPE(),
         GOUT_DESC(),
         IN( "psd_size_grid", "pnd_agenda_input_t", "pnd_agenda_input",
-            "pnd_agenda_input_names", "dpnd_data_dx_names" ),
+            "pnd_agenda_input_names", "dpnd_data_dx_names",
+            "scat_species_a", "scat_species_b" ),
         GIN( "n0", "mu", "la", "ga", "t_min", "t_max", "picky" ),
         GIN_TYPE( "Numeric", "Numeric",  "Numeric", "Numeric",
                   "Numeric", "Numeric", "Index" ),
