@@ -1,5 +1,13 @@
 2017-10-18  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
+	* arts-2-3-842
+
+	* src/m_microphysics.cc (psdMgdMass): Some lines added.
+
+	* src/math_funcs.cc (mgd): A bit more documentation.
+
+2017-10-18  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
 	* arts-2-3-841
 
 	* src/m_microphysics.cc (psdMgdMass): Extended, but still work in
